# ChessEngine

./: CMakeLists.txt  README.md  hopexecute()  workflow.txt
include/: Board.h  CommandFactory.h  GridPoint.h  NewBoard.h  NewGridPoint.h  Piece.h  Square.h  newBoard.h
include/Command/: Command.h  DefaultBoard.h  DeletePiece.h  MakeBishop.h  MakeKing.h  MakeKnight.h  MakePawn.h  MakePiece.h  MakeQueen.h  MakeRook.h  MovePiece.h
include/Composite/: Color.h  PieceSet.h
include/Core/: Board.h  Context.h
include/Facade/: Game.h
include/FactoryInterpreter/: CommandFactory.h
include/PassKey/: PassKey.h
include/Visitor/: PrintVisitor.h  Visitor.h
include/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  bishop.h  knight.h  queen.h  rook.h
src/: Bishop.cpp  Board.cpp  CommandFactory.cpp  GridPoint.cpp  King.cpp  NewBoard.cpp  Piece.cpp  Square.cpp
src/Command/: Command.cpp  DefaultBoard.cpp  MakeBishop.cpp  MakeKing.cpp  MakePiece.cpp  MakeRook.cpp  MovePiece.cpp
src/Composite/: Color.cpp  PieceSet.cpp
src/Core/: Board.cpp
src/Facade/: Game.cpp
src/FactoryInterpreter/: CommandFactory.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/Visitor/: PrintVisitor.cpp
tests/: main.cpp  test.cpp
